fixing route dan docker config
